--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 filetype  # for checking filetype
 chardet  # for moviepy.editor
 moviepy
-pytorch
 pysoundfile  # for torchaudio.load
-torchaudio
-torchvision
+# pytorch
+# torchaudio
+# torchvision
 demucs
